# rust-discord-overlay

./: .gitignore  Cargo.toml  PKGBUILD  README.md  install.sh  release.sh
.github/workflows/: release.yml
assets/: rust-discord-overlay.desktop
src/: audio.rs  avatar.rs  cli.rs  config.rs  discord.rs  ipc.rs  main.rs  overlay.rs  settings.rs  state.rs  tray.rs
