[package]
name = "rust-discord-overlay"
version = "0.1.0"
edition = "2021"
description = "Discord overlay for Linux - Rust rewrite of Discover"
license = "GPL-3.0"

[[bin]]
name = "rust-discord-overlay"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
interprocess = { version = "2", features = ["tokio"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
async-channel = "2"
gtk4 = { version = "0.11", features = ["v4_12"] }
gtk4-layer-shell = "0.8"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
bytes = "1"
ksni = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
